--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,6 @@
 .btn-primary{
   @apply inline-block bg-linear-to-r from-blue-500 to-purple-500 text-slate-100 px-6 py-2.5 cursor-pointer rounded-md hover:bg-linear-to-l
 }
+.heading{
+  @apply text-3xl font-bold bg-linear-to-r from-blue-500 to-purple-500 bg-clip-text text-transparent
+}
